<resources>
    <string name="app_name">Kompose</string>

    <!-- Settings Strings -->
    <string name="settings_menu">Settings</string>
    <string name="setting_category_host">Host Settings</string>
    <string name="setting_category_client">Client Settings</string>
    <string name="setting_preload">Preload Size:</string>
    <string name="setting_cache">Cache Size:</string>
    <string name="setting_hostport">Host Server Port:</string>
    <string name="setting_clientport">Client Port:</string>
    <string name="setting_sessionname">Default Session Name:</string>
    <string name="setting_username">Default Username:</string>
    <string name="settings_confirm">Confirm Changes</string>

    <!-- Error Strings -->
    <string name="setting_error_preload">Maximum preload size is </string>
    <string name="setting_error_cache">Maximum cache size is </string>
    <string name="setting_error_username">Please choose a valid username</string>
    <string name="setting_error_sessionname">Please choose a valid session name</string>
    <string name="setting_error_hostport">Please choose a valid port for the host session</string>
    <string name="setting_error_clientport">Please choose a valid port for the client session</string>
    <string name="view_error_clientname">please choose a non-empty  username</string>
    <string name="view_error_sessionname">please choose a non-empty session name</string>
    <string name="view_error_connection_failed">Failed to establish connection to host.</string>
    <string name="view_error_socket_dead">Establishing connection failed: Host is unreachable.</string>
    <string name="view_error_socket_closed">Establishing connection failed: Host socket port is closed.</string>

    <!-- Android Developer Icons -->
    <string name="icons_ai_halt">\ue874</string>
    <string name="icons_ai_arrow_down">\ue829</string>
    <string name="icons_ai_playback_play">\ue87e</string>
    <string name="icons_ai_playback_pause">\ue87f</string>
    <string name="icons_ai_settings">\ue807</string>
    <string name="icons_ai_database">\ue842</string>
    <string name="icons_ai_help">\ue84e</string>

    <!-- Uncategorized -->
    <string name="join">join</string>
    <string name="client_name">My name</string>
    <string name="create_party">create party</string>
    <string name="session_name">session name</string>
    <string name="downvote">downvote</string>
    <string name="youtube_service.download_failed">could not resolve the song details :(</string>
    <string name="title_activity_test_frontend">TestFrontendActivity</string>
    <string name="title_activity_playlist">Kompose</string>
    <string name="youtube_link">youtube link</string>

    <!--Playlist context menu-->
    <string name="add_link">Add youtube link</string>
    <string name="show_history">History</string>
    <string name="leave_session">Leave session</string>
    <string name="host_info">Host info</string>

    <string name="add_youtube_link">add youtube link</string>
    <string name="confirm">confirm</string>
    <string name="close">close</string>
    <string name="add_song">add song</string>
    <string name="thumbnail">thumbnail</string>
    <string name="proposed_by">proposed by</string>
    <string name="down_vote">down vote</string>
    <string name="play">play</string>
    <string name="songs_contained">songs contained</string>
    <string name="pause">pause</string>
    <string name="add_songs">tell others to join your party, or add songs yourself from youtube using the menu top right</string>
    <string name="add_more_songs">add more songs, the play queue is empty!</string>
    <string name="wait_a_second">please wait</string>
    <string name="downvote_button">downvote button</string>
    <string name="song_is_resolved">please wait, we try to fetch the song…</string>
    <string name="your_name">your name</string>
    <string name="join_party">join party</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="looking_for_parties">we are looking for parties…</string>
    <string name="create">create</string>
    <string name="manual">manual</string>
    <string name="history">history</string>
    <string name="ip_address">IP address</string>
    <string name="ip_address_placeholder">192.168.1.1</string>
    <string name="port_placeholder">7261</string>
    <string name="port">port</string>
    <string name="join_manually">join manually</string>
    <string name="host">hosted by</string>
    <string name="creation_date_time">created at</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="join_existing_party">join an existing party and add your own songs to the playlist</string>
    <string name="start_own_party">connect your device to the music station, and start your own party</string>
    <string name="connect_manually">having trouble connecting to the party host? connect here manually</string>
    <string name="songs">songs</string>
</resources>
