<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ch.ethz.inf.vs.kompose.view.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        style="@style/TextContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TileLayout"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_manually" />

        <TextView
            style="@style/LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"/>

        <EditText
            style="@style/DefaultEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.clientName}"
            tools:text="hi mom"/>

        <!--IP / port container-->
        <LinearLayout
            android:id="@+id/ip_port_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!--IP-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    style="@style/LabelTextView"
                    android:id="@+id/ip_text_box_desc"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/ip_text_box"

                    android:text="@string/ip_address" />

                <EditText
                    android:id="@+id/ip_text_box"
                    style="@style/DefaultEditText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ip_text_box_desc"

                    android:hint="@string/ip_address_placeholder"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.ipAddress}" />

            </RelativeLayout>

            <!--Port-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/port_text_box_desc"
                    style="@style/LabelTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/port_text_box"

                    android:text="@string/port" />

                <EditText
                    android:id="@+id/port_text_box"
                    style="@style/DefaultEditText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/port_text_box_desc"

                    android:hint="@string/port_placeholder"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.port}" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            style="@style/PrimaryButton"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel.joinManualClicked}"
            android:text="@string/join_manually" />

    </LinearLayout>

</layout>