<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ch.ethz.inf.vs.kompose.view.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        style="@style/TextContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        android:orientation="vertical">

        <TextView
            style="@style/TileLayout"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_own_party" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp">

            <EditText
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@={viewModel.clientName}"
                android:hint="@string/your_name"
                tools:text="hi mom" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/session_name"
                android:text="@={viewModel.sessionName}"
                tools:text="hi mom" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/PrimaryButton"
            android:layout_marginTop="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel.createSession}"
            android:text="@string/create_party" />

    </LinearLayout>
</layout>
