<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="ch.ethz.inf.vs.kompose.enums.SessionStatus" />

        <import type="ch.ethz.inf.vs.kompose.enums.SongStatus" />

        <variable
            name="viewModel"
            type="ch.ethz.inf.vs.kompose.view.viewmodel.PlaylistViewModel" />
    </data>

    <LinearLayout
        style="@style/RootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.ACTIVE) ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">


            <RelativeLayout
                android:id="@+id/currently_playing"
                android:layout_width="match_parent"
                android:layout_height="40pt"
                android:layout_marginLeft="0pt"
                android:layout_marginRight="0pt"
                android:background="#efefef"
                android:padding="3pt"
                android:visibility="@{viewModel.sessionModel.currentlyPlaying != null ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10sp"
                    android:layout_marginStart="0sp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@{viewModel.sessionModel.currentlyPlaying.thumbnail}"
                    tools:layout_width="100dp"
                    tools:src="@drawable/sample_thumbnail" />

                <RelativeLayout
                    android:id="@+id/currently_playing_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/image"
                    android:layout_toStartOf="@id/play_button_wrapper"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currently_playing_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@{viewModel.sessionModel.currentlyPlaying.title}"
                        android:textColor="#000"
                        android:textSize="18sp"
                        tools:text="George Ezra - Listen to the Man" />

                    <TextView
                        android:id="@+id/currently_playing_seconds_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/currently_playing_title"
                        android:text="@{viewModel.sessionModel.currentlyPlaying.songLengthMinSec}"
                        tools:text="4:20" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proposed_by"
                            tools:text="proposed by " />

                        <TextView
                            android:id="@+id/currently_playing_seconds_proposed_by_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.sessionModel.currentlyPlaying.proposedBy.name}"
                            tools:text="client" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    style="@style/SmallIconButtonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@id/play_button_wrapper"
                    android:text="@string/icons_ai_halt" />

                <RelativeLayout
                    android:id="@+id/play_button_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true">

                    <!--play button-->
                    <TextView
                        android:id="@+id/play_button"
                        style="@style/SmallIconButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:enabled="@{viewModel.sessionModel.isHost}"
                        android:onClick="@{viewModel.onPlayClicked}"
                        android:text="@string/icons_ai_playback_play"
                        android:textSize="26sp"
                        android:visibility="@{viewModel.sessionModel.currentlyPlaying.songStatus.equals(SongStatus.PAUSED) ? View.VISIBLE : View.GONE}" />

                    <!--pause button-->
                    <TextView
                        android:id="@+id/pause_button"
                        style="@style/SmallIconButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:enabled="@{viewModel.sessionModel.isHost}"
                        android:fontFamily="@font/androidicons"
                        android:onClick="@{viewModel.onPauseClicked}"
                        android:text="@string/icons_ai_playback_pause"
                        android:textSize="26sp"
                        android:visibility="@{viewModel.sessionModel.currentlyPlaying.songStatus.equals(SongStatus.PLAYING) ? View.VISIBLE : View.GONE}"
                        tools:visibility="gone" />

                </RelativeLayout>

            </RelativeLayout>


            <LinearLayout
                style="@style/TextContentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{viewModel.sessionModel.playQueue.size() == 0 ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <TextView
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/add_more_songs" />


            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0pt"
                android:layout_marginRight="0pt"
                android:layout_marginTop="10pt"
                tools:listitem="@layout/in_queue_song_view">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


        <LinearLayout
            style="@style/TextContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.WAITING) ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">


            <TextView
                style="@style/SecondaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_songs" />


        </LinearLayout>

        <LinearLayout
            style="@style/TextContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{!viewModel.sessionModel.isHost ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <TextView
                style="@style/SecondaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wait_a_second" />

        </LinearLayout>
    </LinearLayout>
</layout>